--- a/projects/api/style.css
+++ b/projects/api/style.css
@@ -6,7 +6,7 @@ body {
 
 .viewer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   background-color: whitesmoke;
   border: ridge;
   border-radius: 10px;
@@ -37,36 +37,12 @@ body {
 #right:hover {
   transform: scale(1.4);
 }
-
-img {
-  display: block;
-  position: relative;
-  max-width:900px;
-  max-height: 400px;
-  z-index: 0;
-}
-
 #photo {
   position: relative;
-  width: 50%;
+  align-items: center;
 }
 
-.picture {
-  position: relative;
-  width: 100%;
-}
 
 .details {
   position: absolute;
-  background-color: #708090;
-  color: white;
-  width: 100%;
-  height: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-origin: border-box;
-  opacity: 0.7;
-  overflow: hidden;
-  transition: 0.5s ease;
 }
