--- a/projects/api2/style.css
+++ b/projects/api2/style.css
@@ -6,10 +6,62 @@ body {
 
 .heading {
   text-align: center;
+  margin-bottom: 50px;
 }
 
-.input-form {
+.pokemonViewer {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
+  width: 400px;
+  height: 400px;
+  border: blue solid 10px;
+  background: azure;
+  margin: auto;
 }
+
+.side {
+  width: 50px;
+  margin: auto;
+}
+
+#left {
+  transform: rotate(0.5turn);
+  width: 50px;
+}
+
+#left:hover {
+  transform: scale(1.4) rotate(0.5turn);
+}
+
+#right {
+  width: 50px;
+}
+
+#right:hover {
+  transform: scale(1.4);
+}
+
+.displayData {
+
+}
+
+.name {
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+
+}
+
+.photo {
+  margin: auto;
+  align-items: center;
+
+}
+
+.details {
+  text-align: center;
+  font-size: 30px;
+}
+
+
 
