--- a/projects/api2/style.css
+++ b/projects/api2/style.css
@@ -6,17 +6,20 @@ body {
 
 .heading {
   text-align: center;
+  font-weight: bold;
+  font-size: 40px;
   margin-bottom: 50px;
 }
 
 .pokemonViewer {
   display: flex;
   justify-content: space-between;
-  width: 400px;
-  height: 400px;
-  border: blue solid 10px;
+  max-width: 400px;
+  max-height: 400px;
+  border: darkgreen solid 3px;
   background: azure;
   margin: auto;
+  box-shadow: 0 10px 30px 1px black;
 }
 
 .side {
@@ -43,18 +46,22 @@ body {
 
 .displayData {
 
+  width: 400px;
+  height: 300px;
+
+
 }
 
 .name {
   text-align: center;
   font-weight: bold;
   font-size: 40px;
-
 }
 
 .photo {
   margin: auto;
-  align-items: center;
+  max-width: 100%;
+  max-height: 100%;
 
 }
 
