--- a/projects/api2/style.css
+++ b/projects/api2/style.css
@@ -61,12 +61,12 @@ body {
 
 #photo {
   margin: auto;
-  max-width: 100%;
-  max-height: 100%;
 
 }
 
 .details {
+  display: flex;
+  justify-content: space-between;
   text-align: center;
   font-size: 30px;
 }
