--- a/projects/api2/style.css
+++ b/projects/api2/style.css
@@ -9,24 +9,21 @@ body {
   font-weight: bold;
   font-size: 40px;
   margin-bottom: 50px;
-  background-color: lightblue;
 }
 
 .pokemonViewer {
   display: flex;
   justify-content: space-between;
-  max-width: 400px;
-  max-height: 400px;
-  border: darkgreen ridge 3px;
+  width: 55%;
+  height: 45px;
   margin: auto;
   box-shadow: 0 10px 30px 1px black;
-  background-color: brown;
+  background-color: azure;
 }
 
 .side {
   width: 50px;
   margin: auto;
-  background-color: darkred;
 }
 
 #left {
@@ -50,20 +47,17 @@ body {
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 300px;
-  background-color: purple;
+  height: 400px;
 }
 
 .name {
   text-align: center;
   font-weight: bold;
   font-size: 40px;
-  background-color: lightgreen;
 }
 
 #photo {
   margin: auto;
-  background-color: blue;
 }
 
 .details {
@@ -71,7 +65,6 @@ body {
   justify-content: space-between;
   text-align: center;
   font-size: 30px;
-  background-color: orangered;
 }
 
 
