--- a/projects/api4/style.css
+++ b/projects/api4/style.css
@@ -25,7 +25,7 @@ h1 {
 .poke-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: space-between;
+  -ms-flex-direction: space-between;
   justify-content: center;
   margin: 0 auto;
   max-width: 1200px;
@@ -215,7 +215,7 @@ h1 {
   background-color: #001F61;
   border-radius: 10px 10px 0 0;
   color: #fff;
-  font-family: 'Muli';
+  font-family: 'Muli', serif;
   padding: 7px 15px;
   position: fixed;
   bottom: 0;
