--- a/projects/api4/style.css
+++ b/projects/api4/style.css
@@ -14,12 +14,75 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: 'Lato';
   margin: 0;
 }
 
-h1 {
-  letter-spacing: 3px;
+body {
+  font-family: 'Lato', serif;
+}
+
+.wrapper {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  margin-top: 100px;
+
+}
+
+.searchBox{
+  position: relative;
+}
+
+.searchBox .input{
+  width: 0px;
+  border: 0px;
+  height: 75px;
+  padding: 0px 35px;
+  border-radius: 50px;
+  box-shadow: 0 0 15px 1px #b6bbc0;
+  outline: none;
+  color: #42be11;
+  font-weight: bold;
+  font-size: 24px;
+  transition: all 0.5s linear;
+}
+
+.searchButton{
+  position: absolute;
+  top: 0;
+  right: -1px;
+  background: #fff;
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all 0.5s 0.6s linear;
+}
+
+.searchButton .fas{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: #42be11;
+  font-size: 22px;
+  transition: all 0.5s 0.6s linear;
+}
+
+/* jquery class */
+.searchButton.bg-green{
+  background: #42be11;
+  transition: all 0.2s linear;
+}
+
+.searchButton .fas.color-white{
+  color: #fff;
+  transition: all 0.2s linear;
+}
+
+.searchBox .input.active-width{
+  width: 275px;
 }
 
 .poke-container {
@@ -27,7 +90,7 @@ h1 {
   flex-wrap: wrap;
   -ms-flex-direction: space-between;
   justify-content: center;
-  margin: 0 auto;
+  margin: 200px auto;
   max-width: 1200px;
 }
 
