--- a/projects/api4/style.css
+++ b/projects/api4/style.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -9,18 +6,13 @@ body {
   background: #EFEFBB;
   background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);
   background: linear-gradient(to right, #D4D3DD, #EFEFBB);
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: 'Lato', serif;
   margin: 0;
 }
-
-body {
-  font-family: 'Lato', serif;
-}
-
 .wrapper {
   position: absolute;
   top: 0;
@@ -42,7 +34,8 @@ body {
   border-radius: 50px;
   box-shadow: 0 0 15px 1px #b6bbc0;
   outline: none;
-  color: #42be11;
+  /* input box color */
+  color: #FDDFDF;
   font-weight: bold;
   font-size: 24px;
   transition: all 0.5s linear;
@@ -52,7 +45,6 @@ body {
   position: absolute;
   top: 0;
   right: -1px;
-  background: #fff;
   width: 75px;
   height: 75px;
   border-radius: 50%;
@@ -60,19 +52,25 @@ body {
   transition: all 0.5s 0.6s linear;
 }
 
+.button-subtitle {
+  position: absolute;
+  left: 30px;
+  top: -25px;
+  font-size: 40px;
+}
+
 .searchButton .fas{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  color: #42be11;
   font-size: 22px;
   transition: all 0.5s 0.6s linear;
 }
 
 /* jquery class */
 .searchButton.bg-green{
-  background: #42be11;
+  background: #DEFDE0;
   transition: all 0.2s linear;
 }
 
@@ -82,13 +80,12 @@ body {
 }
 
 .searchBox .input.active-width{
-  width: 275px;
+  width: 570px;
 }
 
 .poke-container {
   display: flex;
   flex-wrap: wrap;
-  -ms-flex-direction: space-between;
   justify-content: center;
   margin: 200px auto;
   max-width: 1200px;
