--- a/projects/api4/style.css
+++ b/projects/api4/style.css
@@ -68,7 +68,6 @@ body {
   transition: all 0.5s 0.6s linear;
 }
 
-/* jquery class */
 .searchButton.bg-green{
   background: #DEFDE0;
   transition: all 0.2s linear;
@@ -151,7 +150,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Muli', serif;
+  font-family: 'Muli';
   position: relative;
   height: 169px;
   width: 370px;
@@ -160,7 +159,7 @@ body {
 
 .social-panel button.close-btn {
   border: 0;
-  color: #97A5CE;
+  color: black;
   cursor: pointer;
   font-size: 20px;
   position: absolute;
@@ -200,7 +199,7 @@ body {
 .social-panel h4 {
   margin: 20px 0;
   color: #97A5CE;
-  font-family: 'Muli', serif;
+  font-family: 'Muli';
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
@@ -236,11 +235,11 @@ body {
 }
 
 .floating-btn {
-  border-radius: 27px;
-  background-color: #001F61;
-  border: 1px solid #001F61;
-  box-shadow: 0 16px 22px -17px #03153B;
-  color: #fff;
+  border-radius: 26.5px;
+  background-color: black;
+  /*border: 1px solid #001F61;*/
+  /*box-shadow: 0 16px 22px -17px #03153B;*/
+  color: grey;
   cursor: pointer;
   font-size: 16px;
   line-height: 20px;
@@ -252,8 +251,8 @@ body {
 }
 
 .floating-btn:hover {
-  background-color: #ffffff;
-  color: #001F61;
+  background-color: #DEF3FD;
+  color: lightgray;
 }
 
 .floating-btn:focus {
