--- a/projects/api4/style.css
+++ b/projects/api4/style.css
@@ -13,6 +13,9 @@ body {
   font-family: 'Lato', serif;
   margin: 0;
 }
+
+/* searchBox CSS*/
+
 .wrapper {
   position: absolute;
   top: 0;
@@ -26,7 +29,7 @@ body {
   position: relative;
 }
 
-.searchBox .input{
+.searchBox #input{
   width: 0px;
   border: 0px;
   height: 75px;
@@ -54,9 +57,10 @@ body {
 
 .button-subtitle {
   position: absolute;
-  left: 30px;
-  top: -25px;
-  font-size: 40px;
+  width: 50%;
+  height: 50%;
+  top: 20px;
+  left: 20px;
 }
 
 .searchButton .fas{
@@ -64,7 +68,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  font-size: 22px;
+  font-size: 10px;
   transition: all 0.5s 0.6s linear;
 }
 
@@ -78,9 +82,11 @@ body {
   transition: all 0.2s linear;
 }
 
-.searchBox .input.active-width{
+#input.active-width{
   width: 570px;
 }
+
+/* Pokemon CSS*/
 
 .poke-container {
   display: flex;
@@ -128,161 +134,4 @@ body {
   letter-spacing: 1px;
 }
 
-/* SOCIAL PANEL CSS */
-.social-panel-container {
-  position: fixed;
-  right: 0;
-  bottom: 80px;
-  transform: translateX(100%);
-  transition: transform 0.4s ease-in-out;
-}
 
-.social-panel-container.visible {
-  transform: translateX(-10px);
-}
-
-.social-panel {
-  background-color: #fff;
-  border-radius: 16px;
-  box-shadow: 0 16px 31px -17px rgba(0,31,97,0.6);
-  border: 5px solid #001F61;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Muli';
-  position: relative;
-  height: 169px;
-  width: 370px;
-  max-width: calc(100% - 10px);
-}
-
-.social-panel button.close-btn {
-  border: 0;
-  color: black;
-  cursor: pointer;
-  font-size: 20px;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-}
-
-.social-panel button.close-btn:focus {
-  outline: none;
-}
-
-.social-panel p {
-  background-color: #001F61;
-  border-radius: 0 0 10px 10px;
-  color: #fff;
-  font-size: 14px;
-  line-height: 18px;
-  padding: 2px 17px 6px;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  margin: 0;
-  transform: translateX(-50%);
-  text-align: center;
-  width: 235px;
-}
-
-.social-panel p i {
-  margin: 0 5px;
-}
-
-.social-panel p a {
-  color: #FF7500;
-  text-decoration: none;
-}
-
-.social-panel h4 {
-  margin: 20px 0;
-  color: #97A5CE;
-  font-family: 'Muli';
-  font-size: 14px;
-  line-height: 18px;
-  text-transform: uppercase;
-}
-
-.social-panel ul {
-  display: flex;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.social-panel ul li {
-  margin: 0 10px;
-}
-
-.social-panel ul li a {
-  border: 1px solid #DCE1F2;
-  border-radius: 50%;
-  color: #001F61;
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50px;
-  width: 50px;
-  text-decoration: none;
-}
-
-.social-panel ul li a:hover {
-  border-color: #FF6A00;
-  box-shadow: 0 9px 12px -9px #FF6A00;
-}
-
-.floating-btn {
-  border-radius: 26.5px;
-  background-color: black;
-  /*border: 1px solid #001F61;*/
-  /*box-shadow: 0 16px 22px -17px #03153B;*/
-  color: grey;
-  cursor: pointer;
-  font-size: 16px;
-  line-height: 20px;
-  padding: 12px 20px;
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 999;
-}
-
-.floating-btn:hover {
-  background-color: #DEF3FD;
-  color: lightgray;
-}
-
-.floating-btn:focus {
-  outline: none;
-}
-
-.floating-text {
-  background-color: #001F61;
-  border-radius: 10px 10px 0 0;
-  color: #fff;
-  font-family: 'Muli', serif;
-  padding: 7px 15px;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.floating-text a {
-  color: #FF7500;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 480px) {
-
-  .social-panel-container.visible {
-    transform: translateX(0px);
-  }
-
-  .floating-btn {
-    right: 10px;
-  }
-}
